--- a/app/registerPage/register.component.html
+++ b/app/registerPage/register.component.html
@@ -110,10 +110,6 @@
                 </span>
             </label>
 		</div>
-		<button class="btn btn-primary" type="submit"
-            [disabled]="employeeForm.form.invalid">Register</button>
-
-            <button onclick="employeeForm.form.invalid = 'https://ncat.az1.qualtrics.com/jfe/form/SV_1GlLkFyS2PWNS7z';">Register</button>
-
+<a href="https://ncat.az1.qualtrics.com/jfe/form/SV_1GlLkFyS2PWNS7z">Register</a>
 	</section>
 </form>
